# echomind

./: .SRCINFO  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENHANCED_FEATURES.md  GITHUB_RELEASE.md  INSTALL.md  PKGBUILD  PRIVACY.md  README.md  RELEASE_NOTES.md  TODO.md  config.example.toml  echomind-0.1.0-1-x86_64.pkg.tar.zst  echomind-0.3.0-1-x86_64.pkg.tar.zst  echomind-debug-0.1.0-1-x86_64.pkg.tar.zst  echomind-debug-0.3.0-1-x86_64.pkg.tar.zst  echomind.1  install.ps1  install.sh  instructions.md
.github/workflows/: audit.yml  ci.yml  release.yml  secret-scan.yml  windows.yml
debian/: changelog  control  copyright  rules
echomind/: FETCH_HEAD  config  packed-refs
echomind/objects/pack/: pack-b6d6809cfa86f79e0591e719235b5d23c26f7cb8.idx  pack-b6d6809cfa86f79e0591e719235b5d23c26f7cb8.rev
echomind/refs/heads/: master
pkg/echomind/: .BUILDINFO  .MTREE  .PKGINFO
pkg/echomind-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: api.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  repl.rs  tui.rs
src/echomind-0.1.0/: Cargo.toml  PKGBUILD  README.md
src/echomind-0.1.0/.github/workflows/: release.yml  rust.yml
src/echomind-0.1.0/src/: main.rs
src/features/: collaboration.rs  content.rs  data_processing.rs  history.rs  mod.rs  multimodal.rs  other_features.rs  performance.rs  security.rs  voice.rs  workflow.rs
tests/: api_tests.rs  config_tests.rs
