[package]
name = "echomind"
version = "0.3.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"
indicatif = "0.17"
colored = "2.1"
rustyline = "14.0"
eventsource-stream = "0.2"
futures = "0.3"
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
