[package]
name = "echomind"
version = "0.3.2"
edition = "2021"

[[bin]]
name = "echomind"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"
indicatif = "0.17"
colored = "2.1"
rustyline = "14.0"
eventsource-stream = "0.2"
futures = "0.3"
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# Voice support (disabled for Windows build issues)
# cpal = "0.15"
# rodio = "0.19"

# Security & encryption
ring = "0.16"
rand = "0.8"

# Data processing
# csv = "1.3"
# calamine = "0.24"
# pdf = "0.8"
# image = "0.24"

# Scheduling & automation
cron = "0.12"

# Advanced output
syntect = "5.2"
termcolor = "1.4"

# Web & integrations
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"

# Performance monitoring
lru = "0.12"

# Accessibility
# crossterm = "0.27"
# ratatui = "0.26"

# AI-powered features
regex = "1.10"
whatlang = "0.16"

# Security
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
